user can buy a ticket for a place and updates his wallet correctly

--- a/SallePlaces/Base.lproj/Main.storyboard
+++ b/SallePlaces/Base.lproj/Main.storyboard
@@ -463,6 +463,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Oq2-8p-db2"/>
-        <segue reference="dcR-Zf-9Vw"/>
+        <segue reference="UvQ-NB-akB"/>
     </inferredMetricsTieBreakers>
 </document>
